Подключение к AuthService
